Added small features (deleting photos)

--- a/Street Art Map/ArtworkTVC.xib
+++ b/Street Art Map/ArtworkTVC.xib
@@ -23,21 +23,21 @@
                             <constraint firstAttribute="height" secondItem="6sy-ka-O4o" secondAttribute="width" multiplier="0.75" id="gEm-FP-E1T"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" tag="100" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wWg-lT-G2e">
+                    <label opaque="NO" userInteractionEnabled="NO" tag="100" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wWg-lT-G2e">
                         <rect key="frame" x="16" y="16" width="35" height="20.5"/>
-                        <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
+                        <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" tag="102" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Last Edit Date" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nun-rl-yOg">
-                        <rect key="frame" x="475" y="16" width="109" height="20.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <rect key="frame" x="477" y="16" width="107" height="20.5"/>
+                        <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" tag="101" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Artist" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4h4-cn-2e4">
-                        <rect key="frame" x="16" y="44" width="40.5" height="20.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <rect key="frame" x="16" y="45" width="41.5" height="20.5"/>
+                        <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -57,7 +57,7 @@
             <connections>
                 <outlet property="artistLabel" destination="4h4-cn-2e4" id="fc0-QP-ipp"/>
                 <outlet property="artworkImageView" destination="6sy-ka-O4o" id="W1R-0v-vPX"/>
-                <outlet property="lastEditDateLabel" destination="Nun-rl-yOg" id="Ao3-FW-HY8"/>
+                <outlet property="dateLabel" destination="Nun-rl-yOg" id="ZCa-Js-93X"/>
                 <outlet property="titleLabel" destination="wWg-lT-G2e" id="DuW-gn-4TB"/>
             </connections>
             <point key="canvasLocation" x="320" y="402"/>
