--- a/Street Art Map/Base.lproj/Main.storyboard
+++ b/Street Art Map/Base.lproj/Main.storyboard
@@ -5,6 +5,22 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
     </dependencies>
     <scenes>
+        <!--Navigation Controller-->
+        <scene sceneID="aSe-aD-Sex">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aMc-P1-jxb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <navigationController id="m7T-tg-AJV" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="PpF-ZP-Bb6">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="JSh-F8-HVY" kind="relationship" relationship="rootViewController" id="Xhh-2e-4RO"/>
+                    </connections>
+                </navigationController>
+            </objects>
+            <point key="canvasLocation" x="137" y="-572"/>
+        </scene>
         <!--Street Art Map-->
         <scene sceneID="5ib-C6-exE">
             <objects>
@@ -31,7 +47,7 @@
         <scene sceneID="NjS-Ko-NoK">
             <objects>
                 <tableViewController id="JSh-F8-HVY" customClass="RecentsCDTVC" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="40" sectionHeaderHeight="22" sectionFooterHeight="22" id="Kde-g9-xL1">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="334" sectionHeaderHeight="22" sectionFooterHeight="22" id="Kde-g9-xL1">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -54,11 +70,13 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ASR-fH-Pcj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="417" y="715"/>
+            <point key="canvasLocation" x="416.5" y="714.5"/>
         </scene>
         <!--Add Artwork-->
         <scene sceneID="INf-Ot-SeB">
             <objects>
+                <exit id="iaj-Rm-lM8" userLabel="Exit" sceneMemberID="exit"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Dup-gT-6yb" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="U4G-UC-dUa" customClass="AddAndViewArtworkVC" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="hpf-ag-cTR"/>
@@ -146,6 +164,7 @@
                                 </cells>
                                 <connections>
                                     <outlet property="dataSource" destination="U4G-UC-dUa" id="mmg-X2-EbZ"/>
+                                    <outlet property="delegate" destination="U4G-UC-dUa" id="Z3o-Lq-3do"/>
                                 </connections>
                             </collectionView>
                         </subviews>
@@ -158,11 +177,6 @@
                         </constraints>
                     </view>
                     <toolbarItems>
-                        <barButtonItem systemItem="camera" id="dQX-FA-iRQ">
-                            <connections>
-                                <action selector="addPhotoToArtwork:" destination="U4G-UC-dUa" id="F41-lm-Kho"/>
-                            </connections>
-                        </barButtonItem>
                         <barButtonItem systemItem="compose" id="O7O-GY-OIn">
                             <connections>
                                 <action selector="changeTitle:" destination="U4G-UC-dUa" id="awd-IW-9fK"/>
@@ -176,7 +190,7 @@
                         <barButtonItem style="plain" systemItem="flexibleSpace" id="cy7-9y-Gof"/>
                         <barButtonItem systemItem="trash" id="mHN-3f-gXZ">
                             <connections>
-                                <action selector="deleteCurrentArtwork:" destination="U4G-UC-dUa" id="eBJ-Ro-sCf"/>
+                                <action selector="deleteCurrentPhoto:" destination="U4G-UC-dUa" id="XKS-ZK-mqD"/>
                             </connections>
                         </barButtonItem>
                     </toolbarItems>
@@ -195,13 +209,10 @@
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
-                        <outlet property="deleteBarButtonItem" destination="mHN-3f-gXZ" id="HJM-cH-NIk"/>
                         <outlet property="imageCollectionView" destination="4jd-PB-dSz" id="GB5-HC-9Gq"/>
                         <outlet property="view" destination="55l-Ki-aXf" id="hhj-0w-ZR5"/>
                     </connections>
                 </viewController>
-                <exit id="iaj-Rm-lM8" userLabel="Exit" sceneMemberID="exit"/>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Dup-gT-6yb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1877.5" y="714.5"/>
         </scene>
@@ -232,7 +243,7 @@
                     <navigationItem key="navigationItem" title="Map" id="2l1-Su-JPE"/>
                     <connections>
                         <outlet property="mapView" destination="O58-Xz-NYF" id="OjD-jx-eHS"/>
-                        <segue destination="wD5-RQ-0zd" kind="presentation" identifier="View Photo" id="1wL-PX-QkG"/>
+                        <segue destination="wD5-RQ-0zd" kind="presentation" identifier="View Artwork" id="5gL-eG-eAC"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jTC-vk-bgf" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -282,7 +293,7 @@
             </objects>
             <point key="canvasLocation" x="-335" y="1543"/>
         </scene>
-        <!--ArtistsCDCVC-->
+        <!--Artists-->
         <scene sceneID="QgB-hg-96C">
             <objects>
                 <collectionViewController id="Byp-fp-9kg" customClass="ArtistsCDCVC" sceneMemberID="viewController">
@@ -346,7 +357,7 @@
                             <outlet property="delegate" destination="Byp-fp-9kg" id="hFa-Jf-hou"/>
                         </connections>
                     </collectionView>
-                    <navigationItem key="navigationItem" id="Oku-x9-Jx7">
+                    <navigationItem key="navigationItem" title="Artists" id="Oku-x9-Jx7">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="Vwk-XK-aqj">
                             <connections>
                                 <segue destination="wD5-RQ-0zd" kind="presentation" identifier="Add Artwork" id="p74-Js-UlL"/>
@@ -361,6 +372,7 @@
         <!--Navigation Controller-->
         <scene sceneID="izd-jM-toS">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="u4J-Tp-gNl" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" toolbarHidden="NO" id="wD5-RQ-0zd" sceneMemberID="viewController">
                     <toolbarItems/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
@@ -379,7 +391,6 @@
                         <segue destination="U4G-UC-dUa" kind="relationship" relationship="rootViewController" id="Bf8-JM-Fo0"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="u4J-Tp-gNl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1273" y="715"/>
         </scene>
@@ -406,20 +417,20 @@
         <scene sceneID="0hy-8a-UQ6">
             <objects>
                 <tableViewController id="20v-PQ-yIo" customClass="SelectArtistCDTVC" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="zZS-S7-MUn">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="60" sectionHeaderHeight="22" sectionFooterHeight="22" id="zZS-S7-MUn">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Select Artist Cell" rowHeight="44" id="PxU-4q-mgd">
-                                <rect key="frame" x="0.0" y="86" width="375" height="44"/>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Select Artist Cell" rowHeight="60" id="PxU-4q-mgd">
+                                <rect key="frame" x="0.0" y="86" width="375" height="60"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="PxU-4q-mgd" id="Etx-Pz-J8B">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="59.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Artist Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JP6-wb-bK1">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="59.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <nil key="highlightedColor"/>
@@ -463,6 +474,7 @@
         <!--Artists-->
         <scene sceneID="3sU-og-nhp">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WjQ-Sp-rTH" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="u5u-Ru-eKj" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Artists" id="kgW-DY-Tj6"/>
                     <toolbarItems/>
@@ -475,12 +487,12 @@
                         <segue destination="20v-PQ-yIo" kind="relationship" relationship="rootViewController" id="iFa-td-1UN"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="WjQ-Sp-rTH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2596.5" y="714.5"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="9zc-9R-Und"/>
+        <segue reference="5gL-eG-eAC"/>
+        <segue reference="iXZ-6g-FOr"/>
     </inferredMetricsTieBreakers>
 </document>
